--- a/projectPillSched/index.html
+++ b/projectPillSched/index.html
@@ -18,18 +18,22 @@
 
 
 	<div data-role="page" id="one">
-		<div data-role="panel" id="panel">
-			<div data-role="content">
-				<p>My content here</p>
-			</div>
+
+
+		<div data-role="panel" id="panel" data-theme="a">
+			<!-- TODO: open panel by swipe: http://demos.jquerymobile.com/1.3.2/examples/panels/panel-swipe-open.html -->
+			<button data-icon="flat-calendar">Month View</button>
+			<button data-icon="flat-checkround">Day View</button>
+			<button data-icon="flat-plus">Add Schedule</button>
+			<div data-role="content"></div>
 		</div>
-		
+
+
+
 		<div data-role="header">
 			<a data-iconpos="notext" href="#panel" data-role="button"
 				data-icon="flat-menu"></a>
-			<h1>A</h1>
-			<a data-iconpos="notext" data-role="button" data-icon="home"
-				title="Home">Home</a>
+			<h1>Pills Scheduler</h1>
 		</div>
 
 		<div data-role="content" data-theme="f">
