--- a/projectPillSched/index.html
+++ b/projectPillSched/index.html
@@ -14,6 +14,9 @@
 // Pages: http://demos.jquerymobile.com/1.3.2/widgets/pages/
 // NavBar: http://demos.jquerymobile.com/1.4.2/tabs/tabbed-content.html
 // Search: http://demos.jquerymobile.com/1.2.1/docs/forms/search/index.html
+// Buttons: https://demos.jquerymobile.com/1.2.0/docs/buttons/buttons-inline.html
+// Grids: http://demos.jquerymobile.com/1.1.2/docs/content/content-grids.html
+// TextInputs: http://demos.jquerymobile.com/1.1.1/docs/forms/textinputs/
  -->
 <!-- TODO:
 // Search with dropdown-popup: http://demos.jquerymobile.com/1.4.2/selectmenu-custom-filter/
@@ -165,7 +168,7 @@
 	
 	
 	
-	
+	http://demos.jquerymobile.com/1.1.1/docs/forms/textinputs/
 	
 	
 	
@@ -176,8 +179,13 @@
 		</div>
 
 		<div data-role="content" data-theme="f">
-			<input type="datetime-local" />
-			<a href="#page-sched" data-role="button" data-icon="flat-time">Cancel</a>
+			<ul data-role="listview" data-inset="true">
+				<fieldset class="ui-grid-a">
+					<div class="ui-block-a" style="width:89%"><input type="text" /></div>
+					<div class="ui-block-b" style="width:11%; margin-top: 5px;"><a data-iconpos="notext" data-role="button" data-icon="plus" title="Add" data-theme="c">Home</a></div>
+				</fieldset>
+			</ul>
+			<a href="#page-sched" data-role="button" data-icon="flat-cross">Cancel</a>
 		</div>
 	</div>
 
